# IUE-Programming

./: README.md
class1/: outline.md
class1/calculadora/: syn.py
class1/calculadora/examples/: calcular.rs
class1/calculadora/src/: lib.rs
class1/factorial/: pyproject.toml
class1/factorial/examples/: basic_example.py
class1/factorial/factorial/: test.py
class2/concurrent/concurrent-py/: pyproject.toml
class2/concurrent/concurrent-py/concurrent_py/: main.py
class2/concurrent/concurrent-rs/: Cargo.toml
class2/concurrent/concurrent-rs/src/: main.rs
class2/concurrent/parallel-rs/: Cargo.toml
class2/concurrent/parallel-rs/src/: main.rs
class2/error-py/calculator/: pyproject.toml
class2/error-py/calculator/calculator/: series.py
class2/error-py/error-handling/: pyproject.toml
class2/error-py/error-handling/error_handling/: sandbox.py
class2/error-rs/calculator/: Cargo.toml
class2/error-rs/calculator/src/: lib.rs
class2/error-rs/error-handling/: Cargo.toml
class2/error-rs/error-handling/src/: main.rs
