[tool.poetry]
name = "concurrent-py"
version = "0.1.0"
description = ""
authors = ["Julian D. Otalvaro <juliandavid347@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
calculator = {path = "../../error-py/calculator", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
